--- a/board/build.gradle
+++ b/board/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
+	testImplementation 'org.mockito:mockito-core:4.8.0'
+	implementation 'com.google.code.gson:gson:2.8.7'
 }
 
 tasks.named('test') {
