--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=1234
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.board.entity, com.board.**.dto
 mybatis.configuration.map-underscore-to-camel-case=true
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
