[new] token 기반 로그인

--- a/board/build.gradle
+++ b/board/build.gradle
@@ -22,7 +22,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
 	testImplementation 'org.mockito:mockito-core:4.8.0'
-	implementation 'com.google.code.gson:gson:2.8.7'
+
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'javax.xml.bind:jaxb-api'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
