--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -11,3 +11,14 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
+
+# Token ?? ?
+# ?? ?? ?? = 30 * 60 * 1000 (30?)
+security.jwt.token.secret-key=secretsecretsecretsecretsecret
+security.jwt.token.expire-length=18000000
+spring.jwt.live.atk=60000
+spring.jwt.live.rtk=18000000
+
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
