[new] login aop처리, redis 대신 db 처리

--- a/board/build.gradle
+++ b/board/build.gradle
@@ -25,7 +25,8 @@ dependencies {
 
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'javax.xml.bind:jaxb-api'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-aop:2.7.0'
 }
 
 tasks.named('test') {
